# energy_efficiency_resource_semantic_search

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml
chroma_db/caafa2bf-dccd-4d6a-aaed-f1658e3dfa54/: index_metadata.pickle
chroma_db/fce7c2cc-b78d-446e-b3cc-ae8675e6b8d9/: index_metadata.pickle
display_utils/: ui_components.py
generation_utils/: generator.py  llm_client.py  schema.py
io_utils/: load_db.py  pre_processor.py
retrieval_utils/: retriever.py
